[gd_scene load_steps=44 format=3 uid="uid://dca80dfj3mhgj"]

[ext_resource type="Theme" uid="uid://b511ckv5t4uuq" path="res://assets/temas/tema_padrao.tres" id="1_vt5o5"]
[ext_resource type="Script" uid="uid://bt1feuav35lb3" path="res://telas/minigames/raioX/pe/raio_x_camera_pe.gd" id="2_vt5o5"]
[ext_resource type="Texture2D" uid="uid://dnjfgvkidu12c" path="res://assets/imagens/mini_games/raiox/raioX-area_pe.png" id="3_2ihvs"]
[ext_resource type="Script" uid="uid://b5dwsui2efrk" path="res://addons/GodotAndroidCamera/android_camera.gd" id="4_iqbk8"]
[ext_resource type="PackedScene" uid="uid://1r5etmqb4pgg" path="res://telas/interface/dicas/pop_up_dicas.tscn" id="5_mgamo"]
[ext_resource type="Texture2D" uid="uid://b731ngi2ftjqu" path="res://assets/imagens/mini_games/raiox/scanner.png" id="6_l7332"]
[ext_resource type="Shader" uid="uid://bjyj6memvfe52" path="res://telas/minigames/raioX/raio_x_camera.gdshader" id="7_wq45j"]
[ext_resource type="Texture2D" uid="uid://clno8be3rhruv" path="res://assets/animacoes/screen_click/00001.png" id="8_huowu"]
[ext_resource type="Texture2D" uid="uid://rfbf7be30jcg" path="res://assets/animacoes/screen_click/00002.png" id="9_5cptu"]
[ext_resource type="Texture2D" uid="uid://cu25trw1pumsy" path="res://assets/animacoes/screen_click/00003.png" id="10_qg0pl"]
[ext_resource type="Texture2D" uid="uid://50fvto53gpf7" path="res://assets/animacoes/screen_click/00004.png" id="11_k1mn2"]
[ext_resource type="Texture2D" uid="uid://bputig857pk08" path="res://assets/animacoes/screen_click/00005.png" id="12_gp7fj"]
[ext_resource type="Texture2D" uid="uid://nfps1wd0fdi" path="res://assets/animacoes/screen_click/00006.png" id="13_engjw"]
[ext_resource type="Texture2D" uid="uid://bbl8frefstyyq" path="res://assets/animacoes/screen_click/00007.png" id="14_dffbn"]
[ext_resource type="Texture2D" uid="uid://bkav4vwvo3plh" path="res://assets/animacoes/screen_click/00008.png" id="15_wpn0a"]
[ext_resource type="Texture2D" uid="uid://cvol0scs7dfrs" path="res://assets/animacoes/screen_click/00009.png" id="16_weha4"]
[ext_resource type="Texture2D" uid="uid://du741s3mv0o72" path="res://assets/animacoes/screen_click/00010.png" id="17_qu5u5"]
[ext_resource type="Texture2D" uid="uid://c1dnlfsgkrvm2" path="res://assets/animacoes/screen_click/00011.png" id="18_ats26"]
[ext_resource type="Texture2D" uid="uid://cjd5tsta1wam2" path="res://assets/animacoes/screen_click/00012.png" id="19_wen51"]
[ext_resource type="Texture2D" uid="uid://c6amwel6lk7en" path="res://assets/animacoes/screen_click/00013.png" id="20_mv1ja"]
[ext_resource type="Texture2D" uid="uid://b0da3ioykg14v" path="res://assets/animacoes/screen_click/00014.png" id="21_a6k5x"]
[ext_resource type="Texture2D" uid="uid://17csv1bahapr" path="res://assets/animacoes/screen_click/00015.png" id="22_ocgtq"]
[ext_resource type="Texture2D" uid="uid://b3qrwm6ptdv0g" path="res://assets/animacoes/screen_click/00016.png" id="23_fkg3i"]
[ext_resource type="Texture2D" uid="uid://53s25lw48rer" path="res://assets/animacoes/screen_click/00017.png" id="24_3mlky"]
[ext_resource type="Texture2D" uid="uid://biyyh2mlube2r" path="res://assets/animacoes/screen_click/00018.png" id="25_rdvf5"]
[ext_resource type="Texture2D" uid="uid://c3bkfcsp7q224" path="res://assets/animacoes/screen_click/00019.png" id="26_egxbc"]
[ext_resource type="Texture2D" uid="uid://w0blpmp0rr58" path="res://assets/animacoes/screen_click/00020.png" id="27_lgkl3"]
[ext_resource type="Texture2D" uid="uid://dv7q0cpkk8w1n" path="res://assets/animacoes/screen_click/00021.png" id="28_r460s"]
[ext_resource type="Texture2D" uid="uid://bkh7t4vppgbfs" path="res://assets/animacoes/screen_click/00022.png" id="29_gn313"]
[ext_resource type="Texture2D" uid="uid://d00q6q8blv36t" path="res://assets/animacoes/screen_click/00023.png" id="30_xxcv1"]

[sub_resource type="Animation" id="Animation_v5e34"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_i7hfw"]
resource_name = "cobrir"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.352941), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_irhdg"]
resource_name = "fade"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.352941)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i7hfw"]
_data = {
&"RESET": SubResource("Animation_v5e34"),
&"cobrir": SubResource("Animation_i7hfw"),
&"fade": SubResource("Animation_irhdg")
}

[sub_resource type="Animation" id="Animation_4somj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Posicione o seu pé direitinho aqui, tente deixar o pé firme para eu conseguir ver os ossos!

Clique na tela quando estiver tudo pronto."]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:anchor_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.307812]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:anchor_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.249375]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:anchor_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.737063]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:anchor_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.89225]
}

[sub_resource type="Animation" id="Animation_yb2t5"]
resource_name = "fade"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2e816"]
resource_name = "remover_linha"
length = 0.500002
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.500002),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Posicione o seu pé direitinho aqui, tente deixar o pé firme para eu conseguir ver os ossos!


", "Posicione o seu pé direitinho aqui, tente deixar o pé firme para eu conseguir ver os ossos!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.500002),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.307812, 0.307812]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.500002),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.258125, 0.42875]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.500002),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.732375, 0.732]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.500002),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.901, 0.761565]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2e816"]
_data = {
&"RESET": SubResource("Animation_4somj"),
&"fade": SubResource("Animation_yb2t5"),
&"remover_linha": SubResource("Animation_2e816")
}

[sub_resource type="Animation" id="Animation_1neb8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0666667]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.966667]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.1375]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.13611]
}

[sub_resource type="Animation" id="Animation_ua4ka"]
resource_name = "mover"
length = 2.33334
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2, 2.33334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.079, -0.079, -0.079, -0.079]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.2, 2.33334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.999, 0.162963, 0.163, 0.999]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.2, 2.33334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.143, 1.143, 1.143, 1.143]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 1.2, 2.33334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.168, 0.332407, 0.332, 1.168]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_irhdg"]
_data = {
&"RESET": SubResource("Animation_1neb8"),
&"mover": SubResource("Animation_ua4ka")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_irhdg"]
shader = ExtResource("7_wq45j")
shader_parameter/glow_color = Color(0.333333, 0.796078, 0.968627, 0.909804)
shader_parameter/edge_softness = 0.428
shader_parameter/noise_amount = 0.099
shader_parameter/noise_scale = 10.0
shader_parameter/noise_speed = 0.1

[sub_resource type="SpriteFrames" id="SpriteFrames_s3trw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_huowu")
}, {
"duration": 1.0,
"texture": ExtResource("9_5cptu")
}, {
"duration": 1.0,
"texture": ExtResource("10_qg0pl")
}, {
"duration": 1.0,
"texture": ExtResource("11_k1mn2")
}, {
"duration": 1.0,
"texture": ExtResource("12_gp7fj")
}, {
"duration": 1.0,
"texture": ExtResource("13_engjw")
}, {
"duration": 1.0,
"texture": ExtResource("14_dffbn")
}, {
"duration": 1.0,
"texture": ExtResource("15_wpn0a")
}, {
"duration": 1.0,
"texture": ExtResource("16_weha4")
}, {
"duration": 1.0,
"texture": ExtResource("17_qu5u5")
}, {
"duration": 1.0,
"texture": ExtResource("18_ats26")
}, {
"duration": 1.0,
"texture": ExtResource("19_wen51")
}, {
"duration": 1.0,
"texture": ExtResource("20_mv1ja")
}, {
"duration": 1.0,
"texture": ExtResource("21_a6k5x")
}, {
"duration": 1.0,
"texture": ExtResource("22_ocgtq")
}, {
"duration": 1.0,
"texture": ExtResource("23_fkg3i")
}, {
"duration": 1.0,
"texture": ExtResource("24_3mlky")
}, {
"duration": 1.0,
"texture": ExtResource("25_rdvf5")
}, {
"duration": 1.0,
"texture": ExtResource("26_egxbc")
}, {
"duration": 1.0,
"texture": ExtResource("27_lgkl3")
}, {
"duration": 1.0,
"texture": ExtResource("28_r460s")
}, {
"duration": 1.0,
"texture": ExtResource("29_gn313")
}, {
"duration": 1.0,
"texture": ExtResource("30_xxcv1")
}],
"loop": true,
"name": &"click",
"speed": 25.0
}]

[node name="RaioXCamera" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vt5o5")
script = ExtResource("2_vt5o5")

[node name="CameraDisplay" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CameraDisplay"]
handle_input_locally = false
size = Vector2i(720, 1080)
render_target_update_mode = 4

[node name="CameraView" type="TextureRect" parent="CameraDisplay/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 270.0
offset_top = 180.0
offset_right = 630.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(540, 360)

[node name="AndroidCamera" type="Node" parent="."]
script = ExtResource("4_iqbk8")
metadata/_custom_type_script = "uid://b5dwsui2efrk"

[node name="AreaPe" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0125
anchor_top = 0.210185
anchor_right = 0.994444
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2ihvs")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Fundo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimacaoFundo" type="AnimationPlayer" parent="Fundo"]
libraries = {
&"": SubResource("AnimationLibrary_i7hfw")
}

[node name="AspectRatioContainerDicas" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0555556
anchor_top = 0.0101852
anchor_right = 0.944556
anchor_bottom = 0.223185
offset_right = -0.0800171
offset_bottom = -0.0400085
ratio = 2.8
metadata/_edit_use_anchors_ = true

[node name="PopUpDicas" parent="AspectRatioContainerDicas" instance=ExtResource("5_mgamo")]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainerDicas/PopUpDicas"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.307812
anchor_top = 0.249375
anchor_right = 0.737063
anchor_bottom = 0.89225
offset_right = 0.279816
offset_bottom = 0.0570679
theme_override_font_sizes/font_size = 17
text = "Posicione o seu pé direitinho aqui, tente deixar o pé firme para eu conseguir ver os ossos!

Clique na tela quando estiver tudo pronto."
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="AnimacaoTexto" type="AnimationPlayer" parent="AspectRatioContainerDicas/PopUpDicas/Label"]
libraries = {
&"": SubResource("AnimationLibrary_2e816")
}

[node name="TouchScreen" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.214815
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Scanner" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0666667
anchor_top = 0.966667
anchor_right = 1.1375
anchor_bottom = 1.13611
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_l7332")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="AnimacaoScanner" type="AnimationPlayer" parent="Scanner"]
libraries = {
&"": SubResource("AnimationLibrary_irhdg")
}
speed_scale = 0.2

[node name="ColorRect" type="ColorRect" parent="Scanner"]
z_index = -1
material = SubResource("ShaderMaterial_irhdg")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0454628
anchor_top = 0.104098
anchor_right = 0.894481
anchor_bottom = 0.876616
grow_horizontal = 2
grow_vertical = 2
color = Color(0.333333, 0.796078, 0.968627, 0.258824)
metadata/_edit_use_anchors_ = true

[node name="MaoClick" type="AnimatedSprite2D" parent="."]
position = Vector2(360, 540)
scale = Vector2(0.433468, 0.547619)
sprite_frames = SubResource("SpriteFrames_s3trw")
animation = &"click"

[node name="TimerMao" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="Fundo/AnimacaoFundo" to="." method="_on_animacao_fundo_animation_finished"]
[connection signal="pressed" from="TouchScreen" to="." method="_on_touch_screen_pressed"]
[connection signal="animation_finished" from="Scanner/AnimacaoScanner" to="." method="_on_animacao_scanner_animation_finished"]
[connection signal="timeout" from="TimerMao" to="." method="_on_timer_mao_timeout"]
